--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="author" value"Sergio Figueroa">
 	<meta name="description" value="Pagina de la clase 4">
 	<meta name="keywords" value="Clase 4">
+	<meta charset="utf-8">
+	<meta lang="es-CO">
 </head>
 <body>
 
