Terminado con comentarios

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Clase 4 - Github</title>
@@ -9,6 +9,149 @@
 	<meta lang="es-CO">
 </head>
 <body>
-
+	<head>
+	<!-- Inicio menu -->
+		<nav>
+			<ul>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Technoligies</a></li>
+				<li><a href="index.html"><img src="img/logo.png"/></a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">forge</a></li>
+				<li><a href="#">contact</a></li>
+			</ul>
+		</nav>
+	</head>
+	<!-- Inicio Banner -->
+	<section>
+		<h3>World Tech Makers</h3>
+		<h1>Cloud Application Experts</h1>
+		<h2>We build and scale Cloud-Enabled Web & Mobile Applications</h2>
+		<button type="button">Learn More</button>
+	</section>
+	<!-- Inicio de Articulos con contenido -->
+	<section>
+		<h4>This is what</h4>
+		<h3>We can do for you</h3>
+		<article>
+			<h3>MOBILE DEVELOPMENT</h3>
+			<p>We design, develop and publish fully interactive and visually appealing iOS and Android applications integrated with specialized and optimized backends systems providing smooth performance.</p>
+		</article>
+		<article>
+			<h3>Lorem ipsum dolor sit amet</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elit enim, iaculis id tortor eget, molestie bibendum orci. Fusce feugiat, sapien vitae vestibulum faucibus, nisi ante accumsan enim, id iaculis augue nulla varius justo. Nulla ac libero sit amet erat vehicula feugiat.</p>
+		</article>
+		<article>
+			<h3>Lorem ipsum dolor sit amet</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elit enim, iaculis id tortor eget, molestie bibendum orci. Fusce feugiat, sapien vitae vestibulum faucibus, nisi ante accumsan enim, id iaculis augue nulla varius justo. Nulla ac libero sit amet erat vehicula feugiat.</p>
+		</article>
+		<article>
+			<h3>Lorem ipsum dolor sit amet</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elit enim, iaculis id tortor eget, molestie bibendum orci. Fusce feugiat, sapien vitae vestibulum faucibus, nisi ante accumsan enim, id iaculis augue nulla varius justo. Nulla ac libero sit amet erat vehicula feugiat.</p>
+		</article>
+		<article>
+			<h3>Lorem ipsum dolor sit amet</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elit enim, iaculis id tortor eget, molestie bibendum orci. Fusce feugiat, sapien vitae vestibulum faucibus, nisi ante accumsan enim, id iaculis augue nulla varius justo. Nulla ac libero sit amet erat vehicula feugiat.</p>
+		</article>
+	</section>
+	<!-- Inicio staf -->
+	<section>
+		<h3>PEOPLE WHO MAKES POSSIBLE THE AWESOMENESS</h3>
+		<p>We are a team of 6 Developers and 2 Managers with more than 35 years of experience.</p>
+		<h4>Johan Hernandez</h4>
+		<span>Managing Director & Co-Founder</span>
+		<h4>Robin Hernández</h4>
+		<span>Member of Technical Staff</span>
+		<h4>Guillermo Iguaran</h4>
+		<span>VP of Engineering & Co-Founder</span>
+		<h4>Paola Garcia</h4>
+		<span>RRHH</span>
+		<h4>Roberto Miranda</h4>
+		<span>Chief Operating Officer & Co-Founder</span>
+		<h4>Lacides Charris</h4>
+		<span>Member of Technical Staff</span>
+		<h4>Karen Casadiego</h4>
+		<span>Accounting</span>
+	</section>
+	<!-- Clientes -->
+	<section>
+	<h3>We are not a ”one size fits all” like company. We carefully pick up right technologies for your needs.</h3>
+	<ul>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+		<li><img src="img/clientes/1.png" width="10%" /></li>
+	</ul>
+	</section>
+	<!-- Nuvado -->
+	<section>
+	<h3><img src="img/nube.png" width="25px" height="25px" /> Nuvado</h3>
+	<p>Compile and distribute iOS applications in the cloud. Nuvado is a platform to compile and distribute iOS applications in the Cloud allowing users to use the operating system and code editor of their preference. Build your apps using dedicated servers and distribute through browsers in a hosted emulator or to physical devices through package files or over the air with TestFlight.</p>
+	<a href="#">Try Nuvado</a>
+	</section>
+	<!-- Eventos -->
+	<section>
+		<p>Open-Source is part of our DNA, our Forge is full of community contributions and in-house made utilities:</p>
+		<ul>
+			<li><article>
+					<img src="img/clientes/1.png" height="55px" align="left"><h4>rails : rails</h4><span>Ruby on Rails</span>
+				</article>
+			</li>
+			<li><article>
+				<img src="img/logo.png" height="55px" align="left"><h4>rails : rails</h4><span>Ruby on Rails</span>
+				</article>
+			</li>
+			<li><article>
+					<img src="img/clientes/1.png" height="55px" align="left"><h4>rails : rails</h4><span>Ruby on Rails</span>
+				</article>
+			</li>
+			<li><article>
+				<img src="img/logo.png" height="55px" align="left"><h4>rails : rails</h4><span>Ruby on Rails</span>
+				</article>
+			</li>
+		</ul>
+	</section>
+	<!-- contacto -->
+	<section>
+		<h2>contact Us</h2>
+		<h3>We would love to hear from you</h3>
+		<article>
+			<p>firebase</p>
+			<span>Your name: *</span></br>
+			<input type=text placeholder="Su nombre"></br>
+			<span>Your email: *</span></br>
+			<input type=text placeholder="Email"></br>
+			<span>Comments: *</span></br>
+			<textarea placeholder="Mensaje"></textarea></br>
+			<button type="button">Enviar</button>
+		</article>
+		<article>
+			<p>
+				(+57) 312-615-6914
+			</p>
+			<p>
+				Cll 100 No 49D-134 pi 20 AP 1 C,
+				Barranquilla, Colombia.
+			</p>
+			<p>
+				Follow us at: <img src="img/instagram.png" height="20px"/> <img src="img/facebook.png" height="20px"/> <img src="img/twitter.png" height="20px"/> <img src="img/ruby.png" height="20px"/>
+			</p>
+		</article>
+	</section>
+	<!-- Footer-->
+	<footer>
+		<img src="img/logo.png" height="18px">
+		<img src="img/tweet.png" height="18px" align="right">Tweet</img>
+		<img src="img/like.png" height="18px" align="right">Like</img>
+	</footer>
 </body>
 </html>
